fix: close button Display on mobile

--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -5598,7 +5598,6 @@ div[name='message']:last-child {
     }
     .mck-sidebox.fade.in.popup-enabled .mck-close-btn,
     #km-chat-login-modal.km-sidemodal .mck-close-btn {
-        width: 0 !important;
         overflow: hidden;
     }
 }
